03-git_terraform_02/instance.tf
resource "aws_instance" "web" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t3.micro"

  tags = {
    Name = "ubuntu-public-ec2-instance"
  }
}
